--- a/public/css/porto.demo2.css
+++ b/public/css/porto.demo2.css
@@ -1,3 +1,10 @@
+.menu>li>a {
+    color : black;
+}
+
+.header-info {
+    background-color: #2e46e8;
+}
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i");@import url("https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700");@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i");html{font-size:62.5%;font-size-adjust:100%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{background-color:#fff;color:#7a7d82;font:normal 400 1.5rem / 1.8 "Open Sans",sans-serif;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;overflow-x:hidden}body:not(.loaded)>*:not(.loading-overlay){visibility:hidden}::-moz-selection{background-color:#61605a;color:#fff}::selection{background-color:#61605a;color:#fff}p{margin-bottom:1.5rem}ul,ol{margin:0 0 2.25rem;padding:0;list-style:none}b,strong{font-weight:700}em,i{font-style:italic}hr{max-width:1730px;margin:5.5rem auto 5.2rem;border:0;border-top:1px solid #dfdfdf}sub,sup{position:relative;font-size:70%;line-height:0;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{display:block;max-width:100%;height:auto}@keyframes rotating{from{-webkit-transform:rotate(0deg);transform:rotate(0deg)}to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@-webkit-keyframes spin{0%{-webkit-transform:rotate(0deg)}100%{-webkit-transform:rotate(359deg)}}@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(359deg)}}@-webkit-keyframes bouncedelay{0%,
   80%,
   100%{-webkit-transform:scale(0);transform:scale(0)}40%{-webkit-transform:scale(1);transform:scale(1)}}@keyframes bouncedelay{0%,
