--- a/public/css/frontend-custom-ar.css
+++ b/public/css/frontend-custom-ar.css
@@ -1,12 +1,18 @@
-
-    @font-face {
+@font-face {
     font-family: "Cairo";
     src: url('../fonts/Cairo-Bold.ttf') format('embedded-opentype'),
-        url('../fonts/Cairo-Bold.ttf') format('truetype')
+    url('../fonts/Cairo-Bold.ttf') format('truetype')
 }
 
 body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {
     font-family: 'Cairo', sans-serif !important;
-    text-align: right;
     direction: rtl;
+}
+
+.tt-header-holder .tt-desctop-menu:not(.tt-hover-02) nav > ul li.dropdown:first-child > a {
+    padding: 10px;
+}
+
+.tt-menu-categories .tt-dropdown-menu nav > ul .dropdown-menu, .tt-menu-categories .tt-dropdown-menu nav > ul .tt-megamenu-submenu > li ul {
+    right: 100%;
 }
