--- a/public/css/wokiee.demo5.css
+++ b/public/css/wokiee.demo5.css
@@ -29395,3 +29395,6 @@ html:not(.mac):not(.touch-device) .tt-carousel-brands .slick-track {
 
 /* wokiee theme*/
 
+.element-padding-bottom {
+    padding-bottom: 20px;
+}
