--- a/resources/assets/css/frontend-custom-ar.css
+++ b/resources/assets/css/frontend-custom-ar.css
@@ -37,7 +37,7 @@ body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tf
     border: none;
     outline: none;
     color: #ffffff;
-    background: #0f92c1;
+    background: #4611a7;
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.05em;
