--- a/public/css/porto.demo4.css
+++ b/public/css/porto.demo4.css
@@ -26,3 +26,11 @@
 .img-xxs {
     width : 12px;
 }
+
+.tt-logo img {
+    max-height: 50px !important;
+}
+
+.img-event-btn {
+    height : 200px !important;
+}
