--- a/resources/assets/css/frontend-custom.css
+++ b/resources/assets/css/frontend-custom.css
@@ -47,6 +47,17 @@ span > .countdown-section {
 }
 
 .td-fixed-element {
-    width: 120px;
-    min-width: 120px;
+    width: 160px;
+}
+
+.tt-collapse-block .tt-item:not(:last-child) {
+    border: none;
+}
+
+.dayOff {
+    background-color: #dedede !important;
+}
+
+.theme-color {
+    color : #4611a7 !important;
 }
