--- a/public/css/frontend-custom-en.css
+++ b/public/css/frontend-custom-en.css
@@ -1,4 +1,1 @@
-.date-picker-element {
-    border-top-left-radius: 15px !important;
-    border-bottom-left-radius: 15px !important;
-}
+.date-picker-element{border-top-left-radius:15px!important;border-bottom-left-radius:15px!important}
