--- a/public/css/frontend-custom-ar.css
+++ b/public/css/frontend-custom-ar.css
@@ -1,68 +1,1 @@
-@font-face {
-    font-family: "Cairo";
-    src: url('../fonts/Cairo-Bold.ttf') format('embedded-opentype'),
-    url('../fonts/Cairo-Bold.ttf') format('truetype')
-}
-
-@font-face {
-    font-family: 'Tajawal';
-    src: url('fonts/Tajawal-Medium.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-
-body, html, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, td, thead, tfoot, span, .btn, ul, li,
-.container , .tt-title-small, .tt-description, header , footer, .tt-collapse-title, .tt-collapse-content
-{
-    font-family: 'Tajawal', 'sans-serif' !important;
-    direction: rtl;
-}
-/*body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {*/
-    /*font-family: 'Cairo', sans-serif !important;*/
-    /*direction: rtl;*/
-/*}*/
-
-.tt-header-holder .tt-desctop-menu:not(.tt-hover-02) nav > ul li.dropdown:first-child > a, .tt-stuck-nav .tt-desctop-menu:not(.tt-hover-02) nav > ul li.dropdown:first-child > a {
-    padding: 10px !important;
-}
-
-.tt-menu-categories .tt-dropdown-menu nav > ul .dropdown-menu, .tt-menu-categories .tt-dropdown-menu nav > ul .tt-megamenu-submenu > li ul {
-    right: 100%;
-}
-
-
-
-.tt-search-type2-rtl, .tt-btn-search-rtl {
-    position: relative;
-    padding: 5px 20px 3px;
-    border: none;
-    outline: none;
-    color: #ffffff;
-    background: #4611a7;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0.05em;
-    left: 6px;
-    cursor: pointer;
-    border-bottom-right-radius : 0px;
-    border-top-right-radius : 0px;
-    border-bottom-left-radius : 6px;
-    border-top-left-radius : 6px;
-}
-
-
-.tt-header-holder .obj-move-right {
-    min-width: 220px;
-}
-
-#loader {
-    right : 55% !important;
-    left: 0;
-}
-
-.date-picker-element {
-    border-top-right-radius: 15px !important;
-    border-bottom-right-radius: 15px !important;
-}
-
+@font-face{font-family:Cairo;src:url(../fonts/Cairo-Bold.ttf) format('embedded-opentype'),url(../fonts/Cairo-Bold.ttf) format('truetype')}@font-face{font-family:Tajawal;src:url(fonts/Tajawal-Medium.ttf) format('truetype');font-weight:400;font-style:normal}.btn,.container,.tt-collapse-content .tt-label,.tt-collapse-title,.tt-description,.tt-label-sale,.tt-title-small,a,body,footer,h1,h2,h3,h4,h5,h6,header,html,li,p,row,span,table,td,tfoot,th,thead,tr,tt-label tt-label-our-fatured,tt-label-new,ul{font-family:Tajawal,sans-serif!important;direction:rtl}.tt-header-holder .tt-desctop-menu:not(.tt-hover-02) nav>ul li.dropdown:first-child>a,.tt-stuck-nav .tt-desctop-menu:not(.tt-hover-02) nav>ul li.dropdown:first-child>a{padding:10px!important}.tt-menu-categories .tt-dropdown-menu nav>ul .dropdown-menu,.tt-menu-categories .tt-dropdown-menu nav>ul .tt-megamenu-submenu>li ul{right:100%}.tt-btn-search-rtl,.tt-search-type2-rtl{position:relative;padding:5px 20px 3px;border:none;outline:0;color:#fff;background:#4611a7;font-size:14px;font-weight:500;letter-spacing:.05em;left:6px;cursor:pointer;border-bottom-right-radius:0;border-top-right-radius:0;border-bottom-left-radius:6px;border-top-left-radius:6px}.tt-header-holder .obj-move-right{min-width:220px}#loader{right:55%!important;left:0}.date-picker-element{border-top-right-radius:15px!important;border-bottom-right-radius:15px!important}
