--- a/resources/assets/css/frontend-custom-ar.css
+++ b/resources/assets/css/frontend-custom-ar.css
@@ -14,6 +14,7 @@
 
 body, html, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, td, thead, tfoot, span, .btn, ul, li,
 .container , .tt-title-small, .tt-description, header , footer, .tt-collapse-title, .tt-collapse-content
+.tt-label, .tt-label-sale, tt-label-new, tt-label tt-label-our-fatured
 {
     font-family: 'Tajawal', 'sans-serif' !important;
     direction: rtl;
