--- a/resources/assets/css/frontend-custom-ar.css
+++ b/resources/assets/css/frontend-custom-ar.css
@@ -13,8 +13,10 @@
 
 
 body, html, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, td, thead, tfoot, span, .btn, ul, li,
-.container , .tt-title-small, .tt-description, header , footer, .tt-collapse-title, .tt-collapse-content
-.tt-label, .tt-label-sale, tt-label-new, tt-label tt-label-our-fatured
+.container , .tt-title-small, .tt-description, header , footer
+.tt-collapse-title, .tt-collapse-content, .tt-collapse-block .tt-item .tt-collapse-title,
+.tt-label, .tt-label-sale, tt-label-new, tt-label tt-label-our-fatured,
+.tt-product-single-info .tt-label [class^=tt-label], .tt-collapse-title, .tt-collapse-content
 {
     font-family: 'Tajawal', 'sans-serif' !important;
     direction: rtl;
