--- a/public/css/frontend-custom-ar.css
+++ b/public/css/frontend-custom-ar.css
@@ -16,7 +16,8 @@ body, html, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, td, thead, tfo
 .container , .tt-title-small, .tt-description, header , footer
 .tt-collapse-title, .tt-collapse-content, .tt-collapse-block .tt-item .tt-collapse-title,
 .tt-label, .tt-label-sale, tt-label-new, tt-label tt-label-our-fatured,
-.tt-product-single-info .tt-label [class^=tt-label], .tt-collapse-title, .tt-collapse-content
+.tt-product-single-info .tt-label [class^=tt-label], .tt-collapse-title,
+.tt-collapse-content, .tt-title-options, .form-group , .form, .tt-table-03
 {
     font-family: 'Tajawal', 'sans-serif' !important;
     direction: rtl;
