--- a/public/css/plugins.css
+++ b/public/css/plugins.css
@@ -220,6 +220,11 @@
     padding-bottom: 20px;
 }
 
+.img-md {
+    margin-right: 3px;
+    margin-left: 3px;
+    width: 85px;
+}
 .img-sm {
     height: 100px;
     width: auto;
