--- a/public/css/backend-rtl.css
+++ b/public/css/backend-rtl.css
@@ -4466,12 +4466,24 @@ body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tf
     font-size: smaller;
 }
 
+/*@font-face {*/
+    /*font-family: "Cairo";*/
+    /*src: url('../fonts/Cairo-Bold.ttf') format('embedded-opentype'),*/
+    /*url('../fonts/Cairo-Bold.ttf')  format('truetype')*/
+/*}*/
+
+/*body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {*/
+    /*font-family: 'Cairo', sans-serif !important;*/
+/*}*/
+
 @font-face {
-    font-family: "Cairo";
-    src: url('../fonts/Cairo-Bold.ttf') format('embedded-opentype'),
-    url('../fonts/Cairo-Bold.ttf')  format('truetype')
+    font-family: 'Tajawal';
+    src: url('fonts/Tajawal-ExtraBold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
+
 body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {
-    font-family: 'Cairo', sans-serif !important;
+    font-family: 'Tajawal', 'sans-serif' !important;
 }
