--- a/resources/assets/css/backend-custom.css
+++ b/resources/assets/css/backend-custom.css
@@ -1,13 +1,13 @@
 /*@import url('https://fonts.googleapis.com/css?family=ABeeZee');*/
 
 @font-face {
-    font-family: "ABeeZee";
-    src: url('../fonts/ABeeZee-Regular.ttf') format('embedded-opentype'),
-    url('../fonts/ABeeZee-Regular.ttf')  format('truetype')
+    font-family: "SawarabiGothic";
+    src: url('fonts/SawarabiGothic-Regular.ttf') format('embedded-opentype'),
+    url('fonts/SawarabiGothic-Regular.ttf')  format('truetype')
 }
 
 body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {
-    font-family: 'ABeeZee', sans-serif !important;
+    font-family: 'SawarabiGothic', 'sans-serif' !important;
 }
 
 /*.page-top , .page-header.navbar .page-logo {*/
