--- a/public/css/backend-rtl.css
+++ b/public/css/backend-rtl.css
@@ -4487,3 +4487,11 @@ body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tf
 body, html, div, a, p, h1, h2, h3, h4, h5, h6, table, row, td, th, tr, thead, tfoot, button, span, .btn, .btn-del, ul, li, .page-content, .portlet, .light, .profile-sidebar-portlet {
     font-family: 'Tajawal', 'sans-serif' !important;
 }
+
+.img-xs {
+    width: 50px !important;
+}
+
+.img-sm {
+    width : 100px !important;
+}
